--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,48 @@
 .parallax {
-    /* The image used */
-    background-image: url("img_parallax.jpg");
-  
     /* Set a specific height */
     min-height: 500px;
   
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+    background-attachment: relative;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-  }
+    background-color: gray;
+    height: 25vh;
+    width: 25vw;
+    
+    border-top: 1px solid rgba(255,255,255,.2);
+    }  
 
 #container001{
-    background-image: url("img\containerpicture001.jpg");
-}
+    background-image: url("../img/containerpicture001.jpg");
+    color: #d4bc4f;
+    text-shadow: #FC0 1px 0 30px;    
+    }
 
 #container002{
-    background-image: url("img\containerpicture002.jpg");
-}
+    background-image: url("../img/containerpicture002.jpg");
+    color: #d4b13d;
+    text-shadow: #FC0 1px 0 30px;
+    }
 
 #container003{
-    background-image: url("img\containerpicture003.jpg");
-}
+    background-image: url("../img/containerpicture003.jpg");
+    color: #FFFDD0;
+    text-shadow: #FC0 1px 0 30px;
+    }
 
 #container004{
-    background-image: url("img\containerpicture004.jpg");
-}
+    background-image: url("../img/containerpicture004.jpg");
+    color: #FFFDD0;
+    text-shadow: #FC0 1px 0 30px;
+    }
 
 #container005{
-    background-image: url("img\containerpicture005.jpg");
-}
+    background-image: url("../img/containerpicture005.jpg");
+    color: #FFFDD0;
+    text-shadow: #FC0 1px 0 30px;
+    }
 
 
 
